{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 75,
  "lineage": "10108af3-5ce3-1df4-f8dc-1f7502e80cdd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database-subnet-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/database-subnet-sg",
            "location": "northcentralus",
            "name": "database-subnet-sg",
            "resource_group_name": "webserver-rg-lab01",
            "security_rule": [],
            "tags": {
              "Name": "Database Subnet SG"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gateway-subnet-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/gateway-subnet-sg",
            "location": "northcentralus",
            "name": "gateway-subnet-sg",
            "resource_group_name": "webserver-rg-lab01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-all-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Name": "Gateway Subnet SG"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver-subnet-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/webserver-subnet-sg",
            "location": "northcentralus",
            "name": "webserver-subnet-sg",
            "resource_group_name": "webserver-rg-lab01",
            "security_rule": [],
            "tags": {
              "Name": "Webserver Subnet SG"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vng-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/publicIPAddresses/vng-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.88.8.76",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "vng-public-ip",
            "resource_group_name": "webserver-rg-lab01",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/database-subnet",
            "name": "database-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "webserver-rg-lab01",
            "virtual_network_name": "Daves_Construction"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "webserver-rg-lab01",
            "virtual_network_name": "Daves_Construction"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "webserver-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/webserver-subnet",
            "name": "webserver-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "webserver-rg-lab01",
            "virtual_network_name": "Daves_Construction"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database-nsg-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/database-subnet",
            "network_security_group_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/database-subnet-sg",
            "subnet_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/database-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.database-subnet-sg",
            "azurerm_subnet.database-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "webserver-nsg-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/webserver-subnet",
            "network_security_group_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/webserver-subnet-sg",
            "subnet_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/webserver-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.webserver-subnet-sg",
            "azurerm_subnet.webserver-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "479f01bd-dd89-4c2b-ae25-cd2de813179c",
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction",
            "location": "northcentralus",
            "name": "Daves_Construction",
            "resource_group_name": "webserver-rg-lab01",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/webserver-subnet",
                "name": "webserver-subnet",
                "security_group": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/webserver-subnet-sg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/database-subnet",
                "name": "database-subnet",
                "security_group": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/networkSecurityGroups/database-subnet-sg"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vng",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworkGateways/virtual-network-gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/publicIPAddresses/vng-public-ip",
                "subnet_id": "/subscriptions/08a94325-952c-42f9-9531-3a150b48a522/resourceGroups/webserver-rg-lab01/providers/Microsoft.Network/virtualNetworks/Daves_Construction/subnets/GatewaySubnet"
              }
            ],
            "location": "northcentralus",
            "name": "virtual-network-gateway",
            "private_ip_address_enabled": false,
            "resource_group_name": "webserver-rg-lab01",
            "sku": "Standard",
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "address_space": [
                  "10.2.0.0/24"
                ],
                "vpn_client_protocols": [
                  "SSTP"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.vng-public-ip",
            "azurerm_subnet.gateway-subnet"
          ]
        }
      ]
    }
  ]
}